[package]
name = "tbon"
version = "0.1.0"
authors = ["haydnv"]
edition = "2018"
description = "Tinychain Binary Object Notation is a compact and versatile stream-friendly binary serialization format"
repository = "http://github.com/haydnv/tbon"
readme = "README.md"
license = "Apache-2.0"

categories = ["asynchronous", "encoding", "parser-implementations", "parsing", "web-programming"]
keywords = ["binary", "stream", "decode", "serialize", "deserialize"]

[features]
default = []
tokio-io = ["tokio/io-util"]
all = ["tokio-io"]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
destream = "0.3"
futures = "0.3"
num-traits = "0.2"
num-derive = "0.3"
pin-project = "1.0"
tokio = { version = "1.2", features = ["io-util"], optional = true }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.2", features = ["macros"] }
tokio-test = "0.4"
