[package]
name = "tbon"
version = "0.5.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "Tinychain Binary Object Notation is a compact and versatile stream-friendly binary serialization format"
repository = "https://github.com/haydnv/tbon"
readme = "README.md"
license = "Apache-2.0"

categories = ["asynchronous", "encoding", "parser-implementations", "parsing", "web-programming"]
keywords = ["binary", "stream", "decode", "serialize", "deserialize"]

[features]
default = []
tokio-io = ["tokio/io-util"]
all = ["tokio-io"]

[dependencies]
async-trait = "0.1"
bytes = "1.4"
destream = "0.7"
futures = "0.3"
num-traits = "0.2"
num-derive = "0.4"
pin-project = "1.0"
tokio = { version = "1.29", features = ["io-util"], optional = true }
uuid = "1.4"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.29", features = ["macros"] }
tokio-test = "0.4"
